fixed posts whitespace

--- a/stylesheets/blocks/list.styl
+++ b/stylesheets/blocks/list.styl
@@ -12,13 +12,13 @@
 
 .putainde-List-item
   position: relative
-  padding: .5em .5em .5em 5em
+  padding: 1em .5em 1em 5em
   border-bottom: 1px solid #eee
   min-height: 4em
 
 .putainde-List-authorPicture
   position: absolute
-  top: .5em
+  top: 1em
   left: 0
   width: 4em
   border-radius: 100%
@@ -54,7 +54,7 @@
   position: absolute
   font-size: .825em
   color: #888
-  bottom: unit(.8/@font-size,em)
+  bottom: unit(1.3/@font-size,em)
   right: 0
   a
     font-weight: 700
